# python_example_project

python-example/: pyproject.toml
python-example/tests/: test_python_example.py
