[tool.poetry]
name = "python-example"
version = "0.1.0"
description = ""
authors = ["Miguel Lorenzo Amarelle <miguel@calidadeystems.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pycodestyle = "^2.10.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
